# astro-cli

./: README.md
.github/workflows/: airflow-cd.yml  airflow-ci.yml  dataform-cd.yml  dataform-ci.yml  infra-cd.yml  infra-ci.yml
airflow/: .gitignore  README.md  airflow.cfg  pyproject.toml  requirements.txt  start-airflow-standalone.sh  upload_to_composer.sh
airflow/data/midocean/: branding_item.xlsx
docs/: adr-data-transformation.md  adr-github-monorepo.md  adr-infrastructure-as-code.md  adr-storage.md  adr-supplier-buckets.md
docs/migration/: migration_path.md
infra/: .gitignore  README.md  backend.tf  bootstrap.sh  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/environments/: README.md
infra/environments/dev/: variables.tf
infra/environments/dev/data/: outputs.tf  (+3 more)
infra/environments/qa/: README.md
infra/modules/datasource/: bigquery.tf  buckets.tf  iam.tf  outputs.tf  variables.tf
localdbt-deprecated/: .gitignore  .user.yml  README.md  dbt_project.yml  gold_cli.py  profiles.yml  pyproject.toml  requirements.txt  workspace.yaml
localdbt-deprecated/bronze_silver_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
localdbt-deprecated/bronze_silver_pipeline/bronze_silver_pipeline/: assets.py
localdbt-deprecated/data/: warehouse.db
localdbt-deprecated/data/bronze/: attributes.csv
localdbt-deprecated/models/: bronze_attributes.sql  bronze_items.sql  silver_attributes.sql  silver_items.sql  silver_values.sql
localdbt-deprecated/models/gold/: gold_attributes.sql  gold_items.sql  gold_values.sql
(+81 files in other folders)
