[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-storage>=3.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.0.2",
]

[tool.uv.sources]
airflow = { workspace = true }
